--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\alext\\AppData\\Local\\Continuum\\anaconda3\\envs\\py2\\python.exe",
+    "python.pythonPath": "C:\\Users\\alext\\Anaconda3\\python.exe",
     "python.testing.pytestArgs": [
         "examples"
     ],
